--- a/apuntes/Extra_Promesas_Async_Await.ipynb
+++ b/apuntes/Extra_Promesas_Async_Await.ipynb
@@ -105,7 +105,7 @@
     "\n",
     "<li>Promises: Útil cuando deseas un mayor control sobre el flujo de ejecución o cuando trabajas con código asincrónico de manera más manual. Pueden ser preferibles en situaciones donde necesitas encadenar <code>Promises</code> de manera específica.</li>\n",
     "<li><code>Async/Await</code>: Recomendado para la mayoría de los casos, ya que ofrece una sintaxis más limpia y legible. Es especialmente útil cuando se trabaja con múltiples llamadas asincrónicas o cuando se necesita un manejo de errores más claro.</li><br>\n",
-    "<i>En resumen, tanto Promesas como <code>Async/Await</code> son para el manejo de asincronía en JavaScript. La elección entre uno u otro dependerá de tu estilo de programación y las necesidades específicas de tu proyecto.<i>\n",
+    "<i>En resumen, tanto <code>Promesas</code> como <code>Async/Await</code> son para el manejo de asincronía en JavaScript. La elección entre uno u otro dependerá de tu estilo de programación y las necesidades específicas de tu proyecto.<i>\n",
     "<br><hr>\n",
     "\n",
     "<span style=\"font-size: 14pt\">\n",
